[gd_scene load_steps=54 format=3 uid="uid://dkgpo83vsvf6n"]

[ext_resource type="PackedScene" uid="uid://bwjim2twt32uf" path="res://scene/mamie.tscn" id="1_78l3u"]
[ext_resource type="Script" path="res://script/Script_scene_greyblock.gd" id="1_a1d8j"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="2_m0kki"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="3_l1xyf"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="3_nbc5r"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/camera_3d_resource.gd" id="4_eic3h"]
[ext_resource type="PackedScene" uid="uid://chi586ssubep1" path="res://asset/asset_visuel/Nintendo DS.glb" id="7_agyvh"]
[ext_resource type="PackedScene" uid="uid://g7und5rhuylg" path="res://asset/asset_visuel/table_chaise.glb" id="7_mlwqy"]
[ext_resource type="PackedScene" uid="uid://dw3vpvlrsjxfs" path="res://scene/objets_base.tscn" id="8_mqrtj"]
[ext_resource type="PackedScene" uid="uid://cc1jveh1jjmrc" path="res://scene/Texte_Souvenir.tscn" id="10_mlifd"]
[ext_resource type="AudioStream" uid="uid://bxhbtg748m7gb" path="res://addons/phantom_camera/assets/asset sonore/cat sound 1.ogg" id="11_i8rbw"]
[ext_resource type="AudioStream" uid="uid://d1ye3qa73h6m2" path="res://addons/phantom_camera/assets/asset sonore/cat sound 2.ogg" id="12_t5y5h"]
[ext_resource type="AudioStream" uid="uid://b0qwxmw3y1ya7" path="res://addons/phantom_camera/assets/asset sonore/cat sound 3.ogg" id="13_q7d78"]
[ext_resource type="AudioStream" uid="uid://b4ss8kso3exlg" path="res://addons/phantom_camera/assets/asset sonore/cat sound 4.ogg" id="14_26qbn"]
[ext_resource type="AudioStream" uid="uid://dndf1khal8vg0" path="res://addons/phantom_camera/assets/asset sonore/cat sound 5.ogg" id="15_c4qwj"]
[ext_resource type="AudioStream" uid="uid://sb0gtyxbdh6l" path="res://addons/phantom_camera/assets/asset sonore/fond sonore extérieur.ogg" id="16_6jga2"]
[ext_resource type="AudioStream" uid="uid://etl4dugi8xn7" path="res://addons/phantom_camera/assets/asset sonore/bruit quand tu garde un objet dans ta poche.ogg" id="17_h0upu"]
[ext_resource type="AudioStream" uid="uid://btscqqvv8tsu0" path="res://addons/phantom_camera/assets/asset sonore/door open.ogg" id="18_s3vp5"]
[ext_resource type="AudioStream" uid="uid://dwgogovgyhvj" path="res://addons/phantom_camera/assets/asset sonore/door close.ogg" id="19_dvfjw"]
[ext_resource type="AudioStream" uid="uid://ddphi1iq63m7d" path="res://addons/phantom_camera/assets/asset sonore/jingle tv + jeu télé.ogg" id="20_sqjhu"]
[ext_resource type="AudioStream" uid="uid://bpttpe0d1hcln" path="res://addons/phantom_camera/assets/asset sonore/pas contre le sol intérieur.ogg" id="21_1ie1l"]
[ext_resource type="AudioStream" uid="uid://cccsqed6ejxib" path="res://addons/phantom_camera/assets/asset sonore/intérieur maison ambiance.ogg" id="22_un3kn"]
[ext_resource type="AudioStream" uid="uid://bus7o01vtsrv7" path="res://addons/phantom_camera/assets/asset sonore/tourner une page 1.ogg" id="23_kqqrw"]
[ext_resource type="AudioStream" uid="uid://ctspjkk2rv6or" path="res://addons/phantom_camera/assets/asset sonore/tourner une page 2.mp3" id="24_5apos"]
[ext_resource type="AudioStream" uid="uid://b86pie2kiymso" path="res://addons/phantom_camera/assets/asset sonore/Radio click + musiques.ogg" id="25_e835v"]
[ext_resource type="AudioStream" uid="uid://dk138re87fcu5" path="res://addons/phantom_camera/assets/asset sonore/glass put down.ogg" id="26_ni2x7"]
[ext_resource type="AudioStream" uid="uid://ddqbg6730038v" path="res://addons/phantom_camera/assets/asset sonore/glass pick up.ogg" id="27_w8uhp"]
[ext_resource type="AudioStream" uid="uid://d0kksmpr8is7o" path="res://addons/phantom_camera/assets/asset sonore/click.ogg" id="28_l2idd"]
[ext_resource type="AudioStream" uid="uid://dhkdxynmq6ny" path="res://addons/phantom_camera/assets/asset sonore/cat purr.ogg" id="29_ry6sd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_puydc"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_8hsvg"]
sky_material = SubResource("ProceduralSkyMaterial_puydc")

[sub_resource type="Environment" id="Environment_pnk46"]
background_mode = 2
sky = SubResource("Sky_8hsvg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avpkt"]

[sub_resource type="BoxMesh" id="BoxMesh_5rbto"]
material = SubResource("StandardMaterial3D_avpkt")
size = Vector3(25, 25, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_mfogb"]
size = Vector3(25, 25, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3762b"]

[sub_resource type="BoxMesh" id="BoxMesh_k43oc"]
material = SubResource("StandardMaterial3D_3762b")
size = Vector3(20, 0.3, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_f4sxw"]
size = Vector3(20, 0.3, 15)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5ijv2"]

[sub_resource type="BoxMesh" id="BoxMesh_tsk8i"]
material = SubResource("StandardMaterial3D_5ijv2")
size = Vector3(20, 9, 0.3)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1wuyl"]
noise_type = 3
frequency = 0.095
fractal_octaves = 10
fractal_gain = 5.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bgoc7"]
noise = SubResource("FastNoiseLite_1wuyl")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mwkcx"]
albedo_color = Color(0.2, 0.270588, 0.109804, 1)
albedo_texture = SubResource("NoiseTexture2D_bgoc7")

[sub_resource type="BoxMesh" id="BoxMesh_x51ep"]
material = SubResource("StandardMaterial3D_mwkcx")
size = Vector3(20, 0.3, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_6flvy"]
size = Vector3(20, 0.3, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_ody2o"]
size = Vector3(8, 0.2, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_faoug"]
size = Vector3(20, 0.2, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_g5nvo"]
size = Vector3(8, 0.2, 8)

[sub_resource type="Resource" id="Resource_q88rd"]
script = ExtResource("3_l1xyf")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_lhcdi"]
script = ExtResource("4_eic3h")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="Resource" id="Resource_7crwf"]
script = ExtResource("3_l1xyf")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_85idd"]
script = ExtResource("4_eic3h")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="Resource" id="Resource_qlif0"]
script = ExtResource("3_l1xyf")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_1gak3"]
script = ExtResource("4_eic3h")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="Resource" id="Resource_ngual"]
script = ExtResource("3_l1xyf")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="Resource" id="Resource_uebgi"]
script = ExtResource("4_eic3h")
cull_mask = 1048575
h_offset = 0.0
v_offset = 0.0
projection = 0
fov = 75.0
size = 1.0
frustum_offset = Vector2(0, 0)
near = 0.05
far = 4000.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_su8bt"]
random_volume_offset_db = 3.43
streams_count = 5
stream_0/stream = ExtResource("11_i8rbw")
stream_1/stream = ExtResource("12_t5y5h")
stream_2/stream = ExtResource("13_q7d78")
stream_3/stream = ExtResource("14_26qbn")
stream_4/stream = ExtResource("15_c4qwj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yga78"]
streams_count = 2
stream_0/stream = ExtResource("23_kqqrw")
stream_1/stream = ExtResource("24_5apos")

[sub_resource type="BoxMesh" id="BoxMesh_p1o7i"]
size = Vector3(20, 1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_2p1pb"]
size = Vector3(20, 1, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_87xni"]
size = Vector3(6, 6, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_y5t1p"]
size = Vector3(6, 6, 0.5)

[node name="Greyblock_scene" type="Node3D" node_paths=PackedStringArray("pcam_milieu", "pcam_gauche", "pcam_droite", "cam_proche", "mamie")]
script = ExtResource("1_a1d8j")
pcam_milieu = NodePath("PhantomCameraMilieu")
pcam_gauche = NodePath("PhantomCameraGauche")
pcam_droite = NodePath("PhantomCameraDroite")
cam_proche = NodePath("Scene_souvenir")
mamie = NodePath("Mamie")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pnk46")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.741642, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.29952, 0, -10)
mesh = SubResource("BoxMesh_5rbto")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2/MeshInstance3D"]
shape = SubResource("BoxShape3D_mfogb")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
visible = false
mesh = SubResource("BoxMesh_5rbto")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10, 0, 0.059)
mesh = SubResource("BoxMesh_5rbto")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10, 0, -0.029)
mesh = SubResource("BoxMesh_5rbto")
skeleton = NodePath("../MeshInstance3D2")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 0.968152, 0.250363, 0, -0.250363, 0.968152, 1.15509, 3.7955, -2.85374)
mesh = SubResource("BoxMesh_k43oc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2/MeshInstance3D6"]
shape = SubResource("BoxShape3D_f4sxw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 0.573462, 0.819232, 0, -0.819232, 0.573462, 0, 4.03618, 6.99729)
mesh = SubResource("BoxMesh_tsk8i")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_x51ep")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_6flvy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.68962, 0.724172, 0, -0.724172, 0.68962, 0, 15.2537, 0)
light_color = Color(1, 0.654902, 0.270588, 1)
light_energy = 16.0
light_angular_distance = 8.49
shadow_enabled = true
shadow_bias = 0.3

[node name="Mamie" parent="." instance=ExtResource("1_78l3u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13238, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.960648, 0.277767, 0, -0.277767, 0.960648, 0, 2.96181, 8.4755)

[node name="PhantomCameraHost" type="Node" parent="Camera3D"]
script = ExtResource("3_nbc5r")

[node name="Area_trigger" type="Node" parent="."]

[node name="Droite" type="Area3D" parent="Area_trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.46617, 0.643837, 7.65411)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_trigger/Droite"]
shape = SubResource("BoxShape3D_ody2o")

[node name="Milieu" type="Area3D" parent="Area_trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.450485, -5.89841)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_trigger/Milieu"]
shape = SubResource("BoxShape3D_faoug")

[node name="Gauche" type="Area3D" parent="Area_trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.04383, 1.27588, 6.66167)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_trigger/Gauche"]
shape = SubResource("BoxShape3D_g5nvo")

[node name="PhantomCameraMilieu" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.960648, 0.277767, 0, -0.277767, 0.960648, 0, 2.96181, 8.4755)
script = ExtResource("2_m0kki")
priority = 1
tween_resource = SubResource("Resource_q88rd")
camera_3d_resource = SubResource("Resource_lhcdi")

[node name="PhantomCameraGauche" type="Node3D" parent="."]
transform = Transform3D(-0.760587, 0.250369, -0.599018, -0.0104937, 0.917789, 0.396929, 0.649151, 0.308185, -0.695432, 1.42553, 2.74238, 1.3755)
script = ExtResource("2_m0kki")
tween_resource = SubResource("Resource_7crwf")
camera_3d_resource = SubResource("Resource_85idd")

[node name="PhantomCameraDroite" type="Node3D" parent="."]
transform = Transform3D(-0.736944, -0.355776, 0.57475, 0.0125952, 0.842904, 0.537916, -0.675836, 0.403653, -0.616692, -1.78635, 2.31766, 1.76276)
script = ExtResource("2_m0kki")
tween_resource = SubResource("Resource_qlif0")
camera_3d_resource = SubResource("Resource_1gak3")

[node name="Nintendo DS" parent="." instance=ExtResource("7_agyvh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.93668, 0.15, 8.98242)

[node name="Objet_briilance" parent="Nintendo DS" instance=ExtResource("8_mqrtj")]

[node name="table_chaise" parent="." instance=ExtResource("7_mlwqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.02232, 0.15, 7.91369)

[node name="Objet_briilance" parent="table_chaise" instance=ExtResource("8_mqrtj")]

[node name="Control" parent="." instance=ExtResource("10_mlifd")]
mouse_filter = 2

[node name="Scene_souvenir" type="Node3D" parent="." node_paths=PackedStringArray("follow_target")]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 2.13238, 2)
script = ExtResource("2_m0kki")
follow_mode = 6
follow_target = NodePath("../Mamie")
tween_resource = SubResource("Resource_ngual")
camera_3d_resource = SubResource("Resource_uebgi")
follow_offset = Vector3(0, 1, 0)
follow_distance = 2.0
spring_length = 2.0

[node name="chat miaulement" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_su8bt")

[node name="fond sonore extérieur" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("16_6jga2")
autoplay = true

[node name="bruit quand tu met un truc dans ta poche" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("17_h0upu")

[node name="door open" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("18_s3vp5")

[node name="door close" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("19_dvfjw")

[node name="Jingle tv + jeu télé" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("20_sqjhu")

[node name="Pas sol intérieur" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.449, 3.1295)
stream = ExtResource("21_1ie1l")

[node name="Ambiance maison intérieur" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("22_un3kn")
autoplay = true

[node name="Tourner une page" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_yga78")

[node name="radio click + musique radio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("25_e835v")

[node name="glass put down" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("26_ni2x7")

[node name="glass pick up" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("27_w8uhp")

[node name="click de fin radio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("28_l2idd")

[node name="Cat purr" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("29_ry6sd")

[node name="Fenetre" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.2683, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Fenetre"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.799, 10)
mesh = SubResource("BoxMesh_p1o7i")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Fenetre"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.259756, 10)
mesh = SubResource("BoxMesh_2p1pb")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Fenetre"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.614, 0, 10)
mesh = SubResource("BoxMesh_87xni")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Fenetre"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.6093, 0, 10)
mesh = SubResource("BoxMesh_y5t1p")

[connection signal="body_entered" from="Area_trigger/Droite" to="." method="_on_droite_body_entered"]
[connection signal="body_entered" from="Area_trigger/Milieu" to="." method="_on_milieu_body_entered"]
[connection signal="body_entered" from="Area_trigger/Gauche" to="." method="_on_gauche_body_entered"]
